Modified confirm message

--- a/Node_Module/views/dashboard.ejs
+++ b/Node_Module/views/dashboard.ejs
@@ -231,7 +231,7 @@
       }
 
       $('.delete').on('click', function() {
-        return confirm('Are you sure you want to delete this?');
+        return confirm(`Are you sure you want to delete unit #${this.value}?`);
       });
     });
   </script>
