--- a/Node_Module/views/addUnitPic.ejs
+++ b/Node_Module/views/addUnitPic.ejs
@@ -16,33 +16,27 @@
 <body>
   <nav>
     <div class="nav-wrapper">
-      <div class="row">
-        <div class="col s3 center">
-          <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li>
-              <a href="/">Home</a>
-            </li>
-            <li>
-              <a href="/listings">Listings</a>
-            </li>
-          </ul>
+      <ul>
+        <li>
+          <a href="/">Home</a>
+        </li>
+        <li>
+          <a href="/listings">Listings</a>
+        </li>
+      </ul>
+      <div class="brand-logo right profile">
+        <div class="dropdown-trigger flex" data-target="dropdown">
+          <span>
+            <%= user%>
+          </span>
+          <%var pic; if (profilePic === null) {pic = profilePic;} else {pic='static/images/userIcon.png';}%>
+            <img src="<%= pic%>" alt="<%= user%>" class="profile-pic">
         </div>
-        <div class="col s3 right">
-          <div class="profile">
-            <div class="dropdown-trigger flex" data-target="dropdown">
-              <span>
-                <%= user%>
-              </span>
-              <%var pic; if (profilePic === null) {pic = profilePic;} else {pic='static/images/userIcon.png';}%>
-              <img src="<%= pic%>" alt="<%= user%>" class="profile-pic">
-            </div>
-          </div>
-          <ul id="dropdown" class="dropdown-content">
-            <li>
-              <a href="/logout">Logout</a>
-            </li>
-          </ul>
-        </div>
+        <ul id="dropdown" class="dropdown-content">
+          <li>
+            <a href="/logout">Logout</a>
+          </li>
+        </ul>
       </div>
     </div>
   </nav>
@@ -76,11 +70,11 @@
   <script src="static/js/materialize.min.js"></script>
   <script src="static/js/init.js"></script>
   <script>
-    $(function() {
+    $(function () {
       function displayImg(input) {
         if (input.files && input.files[0]) {
           var reader = new FileReader();
-          $(reader).on('load', function(e) {
+          $(reader).on('load', function (e) {
             $('#imgD').attr('src', e.target.result).animate({
               height: '300px',
               width: 'auto'
