--- a/Node_Module/views/listings.ejs
+++ b/Node_Module/views/listings.ejs
@@ -14,11 +14,9 @@
 </head>
 
 <body>
-<nav>
-<div class="nav-wrapper">
-  <div class="row">
-    <div class="col s3 center">
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
+  <nav>
+    <div class="nav-wrapper">
+      <ul>
         <li>
           <a href="/">Home</a>
         </li>
@@ -26,26 +24,22 @@
           <a href="/listings">Listings</a>
         </li>
       </ul>
-    </div>
-    <div class="col s3 right">
-      <div class="profile">
+      <div class="brand-logo right profile">
         <div class="dropdown-trigger flex" data-target="dropdown">
           <span>
             <%= user%>
           </span>
           <%var pic; if (profilePic === null) {pic = profilePic;} else {pic='static/images/userIcon.png';}%>
-          <img src="<%= pic%>" alt="<%= user%>" class="profile-pic">
+            <img src="<%= pic%>" alt="<%= user%>" class="profile-pic">
         </div>
+        <ul id="dropdown" class="dropdown-content">
+          <li>
+            <a href="/logout">Logout</a>
+          </li>
+        </ul>
       </div>
-      <ul id="dropdown" class="dropdown-content">
-        <li>
-          <a href="/logout">Logout</a>
-        </li>
-      </ul>
     </div>
-  </div>
-</div>
-</nav>
+  </nav>
   <div class="row">
     <div class="card col s12 m8 offset-m2">
       <div class="row">
@@ -63,37 +57,51 @@
           </div>
         </div>
         <% var c; %>
-        <% for(var i = 0; i < card.length; i++) {%>
-          <div class="col s6 m6">
-            <div class="card">
-              <div class="card-image">
-                <img src="static/uploads/<%= card[i].picture%>" alt="<%= card[i].picture%>">
-              </div>
-              <div class="card-content">
-                <p>Unit ID:
-                  <strong><%= card[i].trans_id%></strong>
-                </p>
-                <p>Unit Address:
-                  <u><%= card[i].unit_address%></u>
-                </p>
-                <p>Price Per Night:
-                  <u><%= card[i].price_per_night%></u>
-                </p>
-                <p>Status:
-                  <u><%= card[i].post_status%></u>
-                </p>
-                <p>Vacancy:
-                  <u><%= card[i].vacancy%></u>
-                </p>
-                <p>Unit Capacity:
-                  <u><%= card[i].unit_capacity%></u>
-                </p>
-                <p>Description:</p>
-                <p><%= card[i].unit_description%></p>
+          <% for(var i = 0; i < card.length; i++) {%>
+            <div class="col s6 m6">
+              <div class="card">
+                <div class="card-image">
+                  <img src="static/uploads/<%= card[i].picture%>" alt="<%= card[i].picture%>">
+                </div>
+                <div class="card-content">
+                  <p>Unit ID:
+                    <strong>
+                      <%= card[i].trans_id%>
+                    </strong>
+                  </p>
+                  <p>Unit Address:
+                    <u>
+                      <%= card[i].unit_address%>
+                    </u>
+                  </p>
+                  <p>Price Per Night:
+                    <u>
+                      <%= card[i].price_per_night%>
+                    </u>
+                  </p>
+                  <p>Status:
+                    <u>
+                      <%= card[i].post_status%>
+                    </u>
+                  </p>
+                  <p>Vacancy:
+                    <u>
+                      <%= card[i].vacancy%>
+                    </u>
+                  </p>
+                  <p>Unit Capacity:
+                    <u>
+                      <%= card[i].unit_capacity%>
+                    </u>
+                  </p>
+                  <p>Description:</p>
+                  <p>
+                    <%= card[i].unit_description%>
+                  </p>
+                </div>
               </div>
             </div>
-          </div>
-        <% } %>
+            <% } %>
       </div>
     </div>
   </div>
