--- a/Node_Module/views/newEntry.ejs
+++ b/Node_Module/views/newEntry.ejs
@@ -14,11 +14,9 @@
 </head>
 
 <body>
-<nav>
-<div class="nav-wrapper">
-  <div class="row">
-    <div class="col s3 center">
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
+  <nav>
+    <div class="nav-wrapper">
+      <ul>
         <li>
           <a href="/">Home</a>
         </li>
@@ -26,26 +24,22 @@
           <a href="/listings">Listings</a>
         </li>
       </ul>
-    </div>
-    <div class="col s3 right">
-      <div class="profile">
+      <div class="brand-logo right profile">
         <div class="dropdown-trigger flex" data-target="dropdown">
           <span>
             <%= user%>
           </span>
           <%var pic; if (profilePic === null) {pic = profilePic;} else {pic='static/images/userIcon.png';}%>
-          <img src="<%= pic%>" alt="<%= user%>" class="profile-pic">
+            <img src="<%= pic%>" alt="<%= user%>" class="profile-pic">
         </div>
+        <ul id="dropdown" class="dropdown-content">
+          <li>
+            <a href="/logout">Logout</a>
+          </li>
+        </ul>
       </div>
-      <ul id="dropdown" class="dropdown-content">
-        <li>
-          <a href="/logout">Logout</a>
-        </li>
-      </ul>
     </div>
-  </div>
-</div>
-</nav>
+  </nav>
   <div class="row">
     <div class="card col s10 m10 offset-m1">
       <div class="row">
