--- a/PHP Module/New/Admin/styles/style1.css
+++ b/PHP Module/New/Admin/styles/style1.css
@@ -1,87 +1,42 @@
-body{
+*{
     margin: 0px;
     padding: 0px;
+}
+
+body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
-#nav-1{
-    width: 100%;
-    height: 100px;
-    text-align: center;
-    border: 2px black solid;
-    background-color: deepskyblue;
-    display: block;
-}
-
-#nav-2{
-    display: block;
-}
-.title{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 35px;
-    color: white;
-    
-}
-
-.dividor{
-    width: 100%;
-    height: 10px;
-}
-
-button{
-    float: left;
-    font-family: Arial, Helvetica, sans-serif;
-    width: 100%;
-    height: 40px;
-    display:inline-block;
-    border: 2px black solid;
-    border-radius: 10px;
-}
-
-form{
-    width: 33%;
-    display: inline-block;
-}
-
-button:hover{
-    border: 2px skyblue solid;
-    opacity: .9;
-}
-
-.radh{
-    display: none;
-}
-
-.tableName{
-    width: 100%;
-    border: 2px black solid;
-    background-color: deepskyblue;
-    text-align: center;
-    
-}
-.box{
-    border: 2px black solid;
-    margin: 5px;
-    width: auto;
-}
-
-
-.content{
-    border: 2px skyblue solid;
-    width: 100%;
+#sidebar{
+    background: #34B9E9;
+    position: absolute;
+    width: 250px;
     height: 100%;
-    overflow-x: auto;
-}
-.right{
-    float: right;
-    width: 49%;
-    height: 600px;
-    margin: 5px;
 }
 
-.left{
-    float: left;
-    width: 49%;
-    height: 600px;
-    margin: 5px;
+a{
+    text-decoration: none;
+    color: white;
+    padding-right: 10px;
+}
+
+ul li{
+    list-style: none;
+    display: block;
+    padding: 15px;
+    border-bottom: 1px solid white;
+}
+
+ul li:hover {
+    background: grey;
+    transition: linear 0.2s;
+}
+
+h1{
+    height: 60px;
+    width: 100%;
+    background: #2BA4D0;
+    line-height: 60px;
+    color: white;
+    text-align: center;
 }
