--- a/Node_Module/views/index.ejs
+++ b/Node_Module/views/index.ejs
@@ -20,6 +20,7 @@
     <label for="pass" class="mt-3 lead text-center w-100">Password</label>
     <input type="password" name="password" class="form-control mb-3" id="pass" placeholder="Enter your password..." required>
     <input type="submit" value="Login" class="btn-submit mt-4 float-right w-25">
+    <a class="btn-submit mt-4 float-right w-25" href="http://192.168.1.9/g_2/g/Register/Register/ProviderRegister/index.html">Register</a>
   </form>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.js"></script>
