--- a/Node_Module/views/static/css/style.css
+++ b/Node_Module/views/static/css/style.css
@@ -1,48 +1,51 @@
 body {
-    background-image: url(http://wallpaper21.com/wp-content/uploads/2017/08/Neon-Heart-Free-1920x-px-.-KB-AbstractLove.-Nike.-Music-Note-wallpaper-wpt7407445.jpg);
-    background-attachment: fixed;
-    background-size: cover;
-    background-position: center;
-    background-blend-mode: overlay;
-    background-color: rgba(0, 0, 0, .65);
-    color: white;
+  background-image: url(https://i.ytimg.com/vi/y2u2bIXHndc/maxresdefault.jpg);
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
+  background-blend-mode: overlay;
+  background-color: rgba(0, 0, 0, .65);
+  color: white;
 }
 
 form {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    box-shadow: inset 0 0 35px rgba(0, 200, 255, .65);
-    border-radius: 10px;
-    background-color: rgba(0, 0, 0, .2);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  box-shadow: inset 0 0 35px rgba(62, 39, 27, .65);
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, .2);
 }
 
-.btn-submit {
-    background-color: transparent;
-    border-radius: 5px;
-    padding: 5px;
-    border: none;
-    box-shadow: inset 0 0 4px rgba(0, 200, 255, 1);
-    color: white;
-    transition: .3s;
+.btn-submit, .btn-submit:hover {
+  background-color: transparent;
+  border-radius: 5px;
+  padding: 5px;
+  border: none;
+  box-shadow: inset 0 0 20px rgba(62, 39, 27, 1);
+  color: white;
+  transition: .3s;
+  text-decoration: none;
+  text-align: center;
 }
 
 .btn-submit:hover {
-    box-shadow: inset 0 0 100px rgba(0, 200, 255, 1);
+  box-shadow: inset 0 0 100px rgba(70, 50, 30, 1);
 }
 
 .form-control {
-    color: white !important;
-    background-color: transparent;
-    transition: .3s ease;
+  color: white !important;
+  background-color: transparent;
+  transition: .3s ease;
 }
 
 .form-control:focus {
-    background-color: rgba(0, 200, 255, .3);
-    transform: scale(1.1);
+  background-color: rgba(62, 39, 27, .3);
+  transform: scale(1.1);
+  box-shadow: none;
 }
 
 .transparent {
-    background-color: transparent;
+  background-color: transparent;
 }
