--- a/Node_Module/views/addUnitPic.ejs
+++ b/Node_Module/views/addUnitPic.ejs
@@ -14,32 +14,35 @@
 </head>
 
 <body>
-  <nav>
-    <div class="nav-wrapper">
-      <ul>
-        <li>
-          <a href="/">Home</a>
-        </li>
-        <li>
-          <a href="/listings">Listings</a>
-        </li>
-      </ul>
-      <div class="brand-logo right profile">
-        <div class="dropdown-trigger flex" data-target="dropdown">
-          <span>
-            <%= user%>
-          </span>
-          <%var pic; if (profilePic === null) {pic = profilePic;} else {pic='static/images/userIcon.png';}%>
-            <img src="<%= pic%>" alt="<%= user%>" class="profile-pic">
-        </div>
-        <ul id="dropdown" class="dropdown-content">
-          <li>
-            <a href="/logout">Logout</a>
-          </li>
-        </ul>
-      </div>
+<nav>
+<div class="nav-wrapper">
+  <ul>
+    <li>
+      <a href="/">Home</a>
+    </li>
+    <li>
+      <a href="/listings">Listings</a>
+    </li>
+    <li>
+      <a href="/reports">Reports</a>
+    </li>
+  </ul>
+  <div class="brand-logo right profile">
+    <div class="dropdown-trigger flex" data-target="dropdown">
+      <span>
+        <%= user%>
+      </span>
+      <%var pic; if (profilePic === null) {pic = profilePic;} else {pic='static/images/userIcon.png';}%>
+        <img src="<%= pic%>" alt="<%= user%>" class="profile-pic">
     </div>
-  </nav>
+    <ul id="dropdown" class="dropdown-content">
+      <li>
+        <a href="/logout">Logout</a>
+      </li>
+    </ul>
+  </div>
+</div>
+</nav>
 
   <div class="container">
     <h1>Apply a Unit Image</h1>
@@ -57,10 +60,17 @@
         </div>
       </div>
       <div class="row">
-        <div class="input-field col s1">
-          <input type="number" name="uId" id="uId">
-          <label for="uId">Unit ID</label>
+
+        <div class="input-field col s2">
+          <select name="uId">
+            <option value="" disabled selected>Choose your option</option>
+            <% for (var i = 0; i < units.length; i++) { %>
+              <option value="<%= units[i].trans_id%>"><%= units[i].trans_id%></option>
+            <% } %>
+          </select>
+          <label>Select a Unit</label>
         </div>
+
       </div>
       <button type="submit" class="btn blue waves-effect">Submit</button>
     </form>
